navbar z-index fixed

--- a/src/app.css
+++ b/src/app.css
@@ -36,7 +36,8 @@ p {
 }
 
 header {
-    position: sticky
+    position: sticky;
+    z-index: 2
 }
 
 footer {
